--- a/src/ip-config.json
+++ b/src/ip-config.json
@@ -1,6 +1,5 @@
 {
   "default": {
-    "localIp": "127.0.0.1",
     "proxy": {
       "protocol": "http",
       "host": "127.0.0.1",
@@ -9,13 +8,39 @@
       "password": ""
     }
   },
+  "owners": {
+    "0x00000000000000000000000000000000000000aa": [
+      "0xd803098237899B746817007B86cA59A0B92c2A61",
+      "0x0000000000000000000000000000000000000002"
+    ],
+    "0x00000000000000000000000000000000000000bb": [
+      "0x0000000000000000000000000000000000000003"
+    ]
+  },
   "wallets": {
-    "0x0000000000000000000000000000000000000001": {
-      "localIp": "10.0.0.10",
+    "0xd803098237899B746817007B86cA59A0B92c2A61": {
       "proxy": {
         "protocol": "socks5",
         "host": "10.0.0.20",
         "port": 1080,
+        "username": "user1",
+        "password": "pass1"
+      }
+    },
+    "0x0000000000000000000000000000000000000002": {
+      "proxy": {
+        "protocol": "http",
+        "host": "10.0.0.21",
+        "port": 8081,
+        "username": "user2",
+        "password": "pass2"
+      }
+    },
+    "0x0000000000000000000000000000000000000003": {
+      "proxy": {
+        "protocol": "https",
+        "host": "10.0.0.22",
+        "port": 8443,
         "username": "",
         "password": ""
       }
